Enable Tracker Pixel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My KodexPay</title>
+    <!-- Pixel Code for https://tracker.eost.io/ -->
+        <script defer src="https://tracker.eost.io/pixel/irAAiFKY6iqlA1ow"></script>
+    <!-- END Pixel Code -->
 </head>
 
 <body>
